// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template components renders the UI snapshot correctly 1`] = `
<div
  className="css-1xdhyk6"
>
  <div
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Above Header
    </div>
  </div>
  <header
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      NYPL Header
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--short"
      >
        Breadcrumbs
      </div>
      <div
        className="placeholder placeholder--short"
      >
        Hero
      </div>
    </div>
  </header>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Content Top
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Left Sidebar
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Main Content
      </div>
      <div
        className="placeholder placeholder--short"
      >
        More Content
      </div>
    </div>
  </main>
  <footer
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Footer
    </div>
  </footer>
</div>
`;

exports[`Template components renders the UI snapshot correctly 2`] = `
<div
  className="css-1u8qly9"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--short"
      >
        Above Header
      </div>
    </div>
    <header
      className="css-0"
    >
      <div
        className="placeholder placeholder--short"
      >
        NYPL Header
      </div>
      <div
        className="css-0"
      >
        <div
          className="placeholder placeholder--short"
        >
          Breadcrumbs
        </div>
        <div
          className="placeholder placeholder--short"
        >
          Hero
        </div>
      </div>
    </header>
  </div>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Content Top
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Left Sidebar
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Main Content
      </div>
      <div
        className="placeholder placeholder--short"
      >
        More Content
      </div>
    </div>
  </main>
  <footer
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Footer
    </div>
  </footer>
</div>
`;

exports[`Template components renders the UI snapshot correctly 3`] = `
<div
  className="css-1y4kn3e"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--short"
      >
        Above Header
      </div>
    </div>
    <header
      className="css-0"
    >
      <div
        className="placeholder placeholder--short"
      >
        NYPL Header
      </div>
      <div
        className="css-0"
      >
        <div
          className="placeholder placeholder--short"
        >
          Breadcrumbs
        </div>
        <div
          className="placeholder placeholder--short"
        >
          Hero
        </div>
      </div>
    </header>
  </div>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Content Top
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Left Sidebar
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Main Content
      </div>
      <div
        className="placeholder placeholder--short"
      >
        More Content
      </div>
    </div>
  </main>
  <footer
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Footer
    </div>
  </footer>
</div>
`;

exports[`Template components renders the UI snapshot correctly 4`] = `
<div
  className="css-1u8qly9"
  data-testid="props"
>
  <div
    className="css-0"
  >
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--short"
      >
        Above Header
      </div>
    </div>
    <header
      className="css-0"
    >
      <div
        className="placeholder placeholder--short"
      >
        NYPL Header
      </div>
      <div
        className="css-0"
      >
        <div
          className="placeholder placeholder--short"
        >
          Breadcrumbs
        </div>
        <div
          className="placeholder placeholder--short"
        >
          Hero
        </div>
      </div>
    </header>
  </div>
  <main
    className="css-0"
    id="mainContent"
  >
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Content Top
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Left Sidebar
      </div>
    </div>
    <div
      className="css-0"
    >
      <div
        className="placeholder placeholder--undefined"
      >
        Main Content
      </div>
      <div
        className="placeholder placeholder--short"
      >
        More Content
      </div>
    </div>
  </main>
  <footer
    className="css-0"
  >
    <div
      className="placeholder placeholder--short"
    >
      Footer
    </div>
  </footer>
</div>
`;
